--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 
 html, body {
     height: 100%;
-    width: 100%;
 }
 
 body {
@@ -40,6 +39,7 @@ nav {
     -moz-transition:height 200ms ease;
     -o-transition:height 200ms ease;
     transition:height 200ms ease; 
+    z-index: 1;
 }
 
 .nav-active {
@@ -150,7 +150,7 @@ footer {
     margin-top: auto;
 }
 
-.mail-icon, .linked-in {
+.footer-icon {
     color: black;
     font-size: 30px;
 }
@@ -302,19 +302,9 @@ footer p {
     font-family: 'Raleway', sans-serif;
 }
 
-.footer-email {
-    color: black;
-    text-decoration: none;
-    font-family: 'Zilla Slab', serif;
-    font-size: 18px;
-}
 
-.footer-email:hover, .footer-email:focus {
-    text-decoration: underline;
-}
-
-.footer-email:visited {
-    color: black;
+button {
+    cursor: pointer;
 }
 
 @media screen and (min-width: 750px){
