--- a/style.css
+++ b/style.css
@@ -2,12 +2,17 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 html, body {
     height: 100%;
+    margin: 0;
+    width: 100%;
 }
 
 body {
-    margin: 0;
     padding: 0;
 }
 
@@ -82,7 +87,7 @@ ul li:hover, ul li:focus {
 }
 
 li a:hover, li a:focus {
-    text-decoration: underline          ;
+    text-decoration: underline;
 }
 
 li button {
@@ -301,7 +306,6 @@ footer p {
     display: none;
     font-family: 'Raleway', sans-serif;
 }
-
 
 button {
     cursor: pointer;
