--- a/style.css
+++ b/style.css
@@ -214,10 +214,42 @@ section p {
     margin: auto;
 }
 
-.port-img-big img {
+.port-img-big {
+    position: relative;
+    overflow: hidden;
+}
+
+.slides {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    position: relative;
+}
+
+.slides::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+.slides::-webkit-scrollbar-thumb {
+    background: black;
+    border-radius: 10px;
+}
+
+.slides::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.slides img {
+    margin-right: 10px;
+    scroll-snap-align: start;
+    transform-origin: center center;
+    transform: scale(1);
+    transition: transform 0.5s;
+    position: relative;
     width: 100%;
     height: auto;
-    text-align: center;
 }
 
 h3 {
@@ -313,7 +345,33 @@ button {
     cursor: pointer;
 }
 
+.previous, .next {
+    display: none;
+}
+
 @media screen and (min-width: 750px){
+
+    .previous, .next {
+        display: inline-block;
+        color: white;
+        position: absolute;
+        top: 50%;
+        z-index: 10;
+        padding: 5px;
+        font-size: 25px;
+    }
+    
+    .previous:hover, .next:hover, .previous:focus, .next:focus {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    
+    .previous {
+        left: 0;
+    }
+    
+    .next {
+        right: 0;
+    }
 
     .small-container {
         margin-top: 0;
@@ -394,4 +452,3 @@ button {
         margin-top: 0;
     }
 }
-
