--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ main {
     flex: 1 0 auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 nav {
@@ -200,8 +202,11 @@ section p {
 }
 
 .bio, .portfolio {
-    margin: 125px auto 50px;
+    margin-top: 125px;
+    margin-bottom: 50px;
     width: 80%;
+    display: flex;
+    flex-direction: column;
 }
 
 .hidden {
@@ -210,7 +215,9 @@ section p {
 
 .port-section {
     width: 100%;
-    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .port-img-big img {
@@ -379,33 +386,8 @@ button {
 }
 
 @media screen and (min-width: 750px){
-
-    .previous, .next {
-        display: inline-block;
-        color: white;
-        position: absolute;
-        top: 50%;
-        z-index: 10;
-        padding: 5px;
-        font-size: 25px;
-        background: none;
-        border: none;
-    }
-    
-    .previous:hover, .next:hover, .previous:focus, .next:focus {
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-
-    .previous:active, .next:active {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-    
-    .previous {
-        left: 0;
-    }
-    
-    .next {
-        right: 0;
+    .bio, .portfolio {
+        width: 65%;
     }
 
     .small-container {
@@ -459,10 +441,6 @@ button {
         font-size: 35px;
     }
 
-    section {
-        max-width: 70%;
-    }
-
     section p {
         font-size: 25px;
     }
@@ -472,7 +450,7 @@ button {
     }
 
     .bio, .portfolio {
-        margin: 50px auto;
+        margin: 50px 0;
     }
 
     footer p {
